@@ -1,3 +1,6 @@
+2012-04-24  6.7.6-8 Cristy  <quetzlzacatenango@image...>
+  * Colorspace round-trip unit tests now work for Q32.
+
 2012-04-23  6.7.6-8 Anthony Thyssen <A.Thyssen@griffith...>
   * Added the RobidouxSharp filter (originally defined Dec 2011)
   * Fixed Variable Blur - incorrect blur area calculation
